--- a/src/routes/WhiteBoard/components/BaseRow/index.css
+++ b/src/routes/WhiteBoard/components/BaseRow/index.css
@@ -200,3 +200,27 @@
     align-items: center;
     justify-content: center;
 }
+
+/*.ant-checkbox-checked:hover {*/
+/*    border-color: #F3A1A1 !important;*/
+/*}*/
+/*.ant-checkbox-checked .ant-checkbox-inner {*/
+/*    background-color: #F3A1A1 !important;*/
+/*    border: none !important;*/
+/*    !*border-color: #1890ff;*!*/
+/*}*/
+/*.ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner {*/
+/*    border-color: #F3A1A1 !important;*/
+/*}*/
+
+/*.ant-radio-checked:hover {*/
+/*    border-color: #F3A1A1 !important;*/
+/*}*/
+/*.ant-radio-checked .ant-radio-inner {*/
+/*    background-color: #F3A1A1 !important;*/
+/*    border: none !important;*/
+/*    !*border-color: #1890ff;*!*/
+/*}*/
+/*.ant-radio-wrapper:hover .ant-radio-inner, .ant-radio:hover .ant-radio-inner, .ant-radio-input:focus + .ant-radio-inner {*/
+/*    border-color: #F3A1A1 !important;*/
+/*}*/
