--- a/src/routes/WhiteBoard/components/BaseRow/index.css
+++ b/src/routes/WhiteBoard/components/BaseRow/index.css
@@ -69,14 +69,28 @@
 .right1 {
     height: 30px;
     width: 30px;
-    /*background-color: #DC8AF9;*/
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .right1 img {
-    height: 100%;
-    width: 100%;
+    height: 20px;
+    width: 20px;
+    object-fit: contain;
+    cursor: pointer;
+}
+.right1-click {
+    height: 30px;
+    width: 30px;
+    background-color: #AD7878;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.right1-click img {
+    height: 20px;
+    width: 20px;
     object-fit: contain;
     cursor: pointer;
 }
