--- a/src/routes/WhiteBoard/components/WindowToolBar/index.css
+++ b/src/routes/WhiteBoard/components/WindowToolBar/index.css
@@ -54,10 +54,10 @@
 }
 .single-box {
     width: 160px;
-    height: 20px;
-    /*height: fit-content;*/
+    /*height: 20px;*/
+    height: fit-content;
     display: flex;
-    background-color: #dbff92;
+    /*background-color: #dbff92;*/
     flex-direction: column;
     /*align-items: center;*/
     /*justify-content: left;*/
