--- a/src/routes/WhiteBoard/components/WindowToolBar/index.css
+++ b/src/routes/WhiteBoard/components/WindowToolBar/index.css
@@ -5,7 +5,7 @@
     top: 50%;
     transform: translateY(-50%);
     right: 0;
-    /*background-color: red;*/
+    background-color: white;
     padding: 15px 0;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 100;
 }
 .figure-bar {
     width: fit-content;
@@ -72,10 +73,10 @@
     margin-bottom: 5px;
 }
 .single-box-contain {
-    /*width: fit-content;*/
+    width: fit-content;
     height: 25px;
-    width: 100px;
-    background-color: orange;
+    /*width: 100px;*/
+    /*background-color: orange;*/
     display: flex;
     flex-direction: row;
     justify-content: space-between;
