Tabs临时解决方案
Signed-off-by: 4.7 <1726394567@qq.com>

--- a/src/routes/Home/components/MyBoard/index.css
+++ b/src/routes/Home/components/MyBoard/index.css
@@ -91,7 +91,7 @@
 .board-container {
     width: 850px;
     height: 300px;
-    max-height: 300px;
+    /*max-height: 300px;*/
     overflow-y: auto;
     display: flex;
     flex-flow: wrap;
