--- a/src/routes/WhiteBoard/components/ToolList/index.css
+++ b/src/routes/WhiteBoard/components/ToolList/index.css
@@ -44,12 +44,14 @@
     height: 40px !important;
     width: 40px !important;
     border-radius: 10px !important;
-    background-color: #FFEDED !important;
+    background-color: #d2d2d2 !important;
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
     cursor: not-allowed !important;
 }
+
+
 .do-box .icon-disabled img {
     width: 30px;
     height: 30px;
@@ -75,7 +77,7 @@
 }
 
 .bar-icon-selected {
-    color:#F3A1A1;
+    background-color: #FFEDED;
 }
 
 .bar-icon img {
