--- a/src/routes/WhiteBoard/components/Widget/index.css
+++ b/src/routes/WhiteBoard/components/Widget/index.css
@@ -53,14 +53,14 @@
     border-radius: 0 0 20px 20px;
 }
 
-.icon {
+.box .icon {
     height: 20px;
     width: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.icon img{
+.box .icon img{
     height: 19px;
     width: 19px;
     object-fit: contain;
