--- a/src/routes/WhiteBoard/components/BaseRow/index.css
+++ b/src/routes/WhiteBoard/components/BaseRow/index.css
@@ -84,8 +84,9 @@
     /*background-color: #282c34;*/
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    margin: 1%;
 }
 .right1 {
     height: 30px;
@@ -101,8 +102,8 @@
     cursor: pointer;
 }
 .right1-click {
-    height: 30px;
-    width: 30px;
+    height: 36px;
+    width: 36px;
     background-color: #AD7878;
     border-radius: 10px;
     display: flex;
@@ -153,7 +154,6 @@
 }
 .right3 {
     height: 40px;
-    width: 70px;
     /*background-color: green;*/
     display: flex;
     align-items: center;
