--- a/src/routes/WhiteBoard/components/BaseRow/index.css
+++ b/src/routes/WhiteBoard/components/BaseRow/index.css
@@ -34,15 +34,15 @@
 }
 .row-left{
     height: 40px;
-    width: 150px;
+    width: 50%;
     /*background-color: #282c34;*/
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 .home-icon{
-    height: 40px;
-    width: 40px;
+    height: 32px;
+    width: 32px;
     /*background-color: #DC8AF9;*/
     display: flex;
     align-items: center;
@@ -55,15 +55,16 @@
     cursor: pointer;
 }
 .board-name {
-    height: 20px;
+    height: fit-content;
     width: fit-content;
     /*background-color: grey;*/
     color: black;
     font-weight: bold;
+    font-size: 150%;
+    font-family: Poppins
 }
 .row-middle {
     height: 60px;
-    width: 700px;
     /*background-color: #282c34;*/
     display: flex;
     align-items: center;
@@ -80,7 +81,8 @@
 }
 .row-right {
     height: 60px;
-    width: 220px;
+    min-width: 220px;
+
     /*background-color: #282c34;*/
     display: flex;
     flex-direction: row;
