--- a/src/routes/Home/components/BaseColumn/index.css
+++ b/src/routes/Home/components/BaseColumn/index.css
@@ -1,6 +1,6 @@
 .base-column{
-    height: 100vh;
-    width: 150px;
+    height: 100%;
+    width: 20%;
     position: absolute;
     top: 0;
     left: 0;
