--- a/src/routes/Home/components/MyBoard/index.css
+++ b/src/routes/Home/components/MyBoard/index.css
@@ -1,24 +1,26 @@
 .my-board {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 80%;
+    left: 20%;
     /*background-color: #282c34;*/
     position: absolute;
     top: 0;
-    left: 0;
+    /*left: 0;*/
     display: flex;
     align-items: center;
 }
 .contain {
-    height: 500px;
-    width: 900px;
+    height: 80%;
+    width: fit-content;
     max-width: 100vw;
     position: absolute;
-    left: 300px;
+    /*left: 300px;*/
     /*background-color: #DC8AF9;*/
     display: flex;
     flex-direction: column;
-    align-items: center;
-    /*justify-content: space-between;*/
+    /*align-items: center;*/
+    margin-left: 30px;
+    justify-content: center;
 }
 .title {
     width: 1000px;
@@ -108,6 +110,7 @@
     justify-content: right;
 }
 .btns {
+    position: absolute;
     width: 250px;
     height: 40px;
     /*background-color: red;*/
