--- a/src/routes/Home/components/MyBoard/index.css
+++ b/src/routes/Home/components/MyBoard/index.css
@@ -51,6 +51,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    font-family: PingFangSC-Regular, sans-serif;
 }
 .left-box {
     width: 100px;
@@ -245,7 +246,7 @@
 .mini-board-box {
     width: 180px;
     height: 120px;
-    background-color: rgba(179,190,194,0.5);
+    /*background-color: rgba(179,190,194,0.5);*/
     border-radius: 10px;
 }
 .mini-board-tool {
@@ -270,6 +271,7 @@
     display: flex;
     flex-direction: row;
     justify-content: left;
+    font-family: PingFangSC-Regular, sans-serif;
     color: black;
 }
 .tool-content {
