--- a/src/routes/Home/components/MyBoard/index.css
+++ b/src/routes/Home/components/MyBoard/index.css
@@ -1,6 +1,6 @@
 .my-board {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     /*background-color: #282c34;*/
     position: absolute;
     top: 0;
